Closed Bug 986076 Opened 12 years ago Closed 12 years ago

Handle JS_NewStringCopyZ failure in ProxyAutoConfig.cpp

Categories

(Core :: Networking, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla31

People

(Reporter: birunthan, Assigned: birunthan)

References

Details

Attachments

(1 file)

Comment on attachment 8395886 [details] [diff] [review] Handle JS_NewStringCopyZ failure in ProxyAutoConfig.cpp Review of attachment 8395886 [details] [diff] [review]: ----------------------------------------------------------------- i appreciate the updates
Attachment #8395886 - Flags: review?(mcmanus) → review+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: