Bug 986076 - Handle JS_NewStringCopyZ failure in ProxyAutoConfig.cpp r=mcmanus